# solana-collider

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  install.sh  package-lock.json  package.json  tsconfig.json  🚀.sh
.config/dAnti/: id.json  token.json
.config/dCreator/: id.json
.config/dManager/: id.json
.config/dPro/: id.json  token.json
.config/dUser/: id.json
.config/dVault/: id.json
dAnti/: AN5hFEFeWJR4SrYUaSbR4R521PHkpqZcGvqPqjJGGbNi.json
dPro/: PRFnsn8GWkGsPwxLXqW2EwmpoXmY7AvdKg4jYs1fjSb.json
postbuild/: cleanProductionCode.js  index.js  initialiser.ts
postbuild/admin/: index.ts  verifier.ts
postbuild/create/: example.setup.sh  index.ts  verifier.ts
postbuild/etc/: propagate.sh  setup.sh
postbuild/initialise/: index.ts  setup.sh  verifier.ts
programs/collider-beta/: Cargo.toml
programs/collider-beta/src/: lib.rs  lib.rs.bak  state.rs  utils.rs  utils.rs.bak
programs/collider-beta/src/instructions/: admin.rs  admin_actions.rs  bulk_withdraw.rs  bulk_withdraw_from_poll.rs  create.rs  create_poll.rs  create_poll.rs.bak  deposit.rs  deposit_to_poll.rs  deposit_to_poll.rs.bak  equalise.rs  equalise_poll.rs  equalise_poll.rs.bak  initialise.rs  initialise_program.rs  mod.rs  user_withdraw.rs  user_withdraw_from_poll.rs  withdraw.rs  withdraw_from_poll.rs
programs/collider-beta/tests/: program_test.rs
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-1001-8fFHKbCR9fn91qRhVzTq6CJhok3Juuh6kpmUEuJTNVBo.tar.zst  snapshot-901-8wuwbNKoodgctBFva4nbiAJT5kgVS5NieSuUs7MHRYy4.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
tests/: collider-beta.ts  lib.rs
(+41 files in other folders)
