# Root Cargo.toml
[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true

[workspace.dependencies]
solana-program = "2.0.0"
solana-program-test = "2.0.0"
solana-security-txt = "1.1.1"
solana-sdk = "2.0.0"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
tokio = { version = "=1.43.0", features = ["full"] }
