# Root Cargo.toml
[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true

[workspace.dependencies]
solana-program = "=1.18"
solana-program-test = "=1.18"
solana-sdk = "=1.18"
solana-security-txt = "1.1.1"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
tokio = { version = "=1.43.0", features = ["full"] }
