[package]
name = "collider-beta"
version = "1.0.0-beta"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = { workspace = true }
thiserror = "1.0"
spl-token-2022 = { version = "=0.9.0", features = ["no-entrypoint"] }
borsh = "0.10"
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
chrono = "0.4"
solana-security-txt = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
